[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameObjects/Tiles/OperationalTile/OperationalTile.gd" type="Script" id=1]
[ext_resource path="res://Components/DoubleDigits/DoubleDigitSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Textures/OperationTile.png" type="Texture" id=3]
[ext_resource path="res://GameObjects/Tiles/OperationalTile/Animation/OperationalTileIdle.tres" type="Animation" id=4]
[ext_resource path="res://GameObjects/Tiles/OperationalTile/Animation/OperationalTileCollected.tres" type="Animation" id=5]
[ext_resource path="res://GameObjects/Tiles/OperationalTile/Sounds/PickUpOperationalTile.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[node name="OperationalTile" type="Area2D" groups=["Operational"]]
collision_layer = 8
collision_mask = 4
script = ExtResource( 1 )
operationalValue = 50

[node name="DoubleDigits" parent="." instance=ExtResource( 2 )]
position = Vector2( 3, 0 )
scale = Vector2( 0.5, 0.5 )

[node name="Operation" type="Sprite" parent="."]
position = Vector2( -4, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
hframes = 5
vframes = 2
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "OperationalTileIdle"
anims/Collected = ExtResource( 5 )
anims/OperationalTileIdle = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_OperationalTile_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_OperationalTile_body_exited"]
